[gd_scene load_steps=62 format=3 uid="uid://b586c3vkx4kp1"]

[ext_resource type="Script" path="res://codigo/boss_slime.gd" id="1_5tkg7"]
[ext_resource type="Texture2D" uid="uid://cte56ba48imkg" path="res://recursos/Enemigos/boss_Slime/sprite_creado.png" id="1_s226o"]
[ext_resource type="Texture2D" uid="uid://d0afqs5ra7dp2" path="res://recursos/Enemigos/boss_Slime/sprite_creado1.png" id="2_fqlmh"]
[ext_resource type="Texture2D" uid="uid://cu6kx6bllk21e" path="res://recursos/Enemigos/boss_Slime/sprite_creado0.png" id="3_pupxb"]
[ext_resource type="Texture2D" uid="uid://245jfvow2xwf" path="res://recursos/Medieval_Castle_Asset_Pack/HUD/bar_background.png" id="5_rebo3"]
[ext_resource type="Texture2D" uid="uid://pk0mu2ilnrtj" path="res://recursos/Medieval_Castle_Asset_Pack/HUD/health_bar.png" id="6_7k0ea"]
[ext_resource type="Texture2D" uid="uid://bpjfkss1cl33d" path="res://recursos/Medieval_Castle_Asset_Pack/HUD/bar.png" id="7_iy1fy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wirsj"]
atlas = ExtResource("2_fqlmh")
region = Rect2(0, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_rw1cp"]
atlas = ExtResource("2_fqlmh")
region = Rect2(177, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqidy"]
atlas = ExtResource("2_fqlmh")
region = Rect2(354, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3bgg"]
atlas = ExtResource("2_fqlmh")
region = Rect2(531, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3572"]
atlas = ExtResource("2_fqlmh")
region = Rect2(708, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkdpg"]
atlas = ExtResource("2_fqlmh")
region = Rect2(885, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnfwq"]
atlas = ExtResource("2_fqlmh")
region = Rect2(1062, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_uepcs"]
atlas = ExtResource("2_fqlmh")
region = Rect2(1239, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5vg1"]
atlas = ExtResource("2_fqlmh")
region = Rect2(1416, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofnbq"]
atlas = ExtResource("2_fqlmh")
region = Rect2(1593, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_recaa"]
atlas = ExtResource("2_fqlmh")
region = Rect2(1770, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdelx"]
atlas = ExtResource("2_fqlmh")
region = Rect2(1947, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrp31"]
atlas = ExtResource("2_fqlmh")
region = Rect2(2124, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyoee"]
atlas = ExtResource("2_fqlmh")
region = Rect2(2301, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_0725h"]
atlas = ExtResource("2_fqlmh")
region = Rect2(2478, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5k6e"]
atlas = ExtResource("2_fqlmh")
region = Rect2(2655, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwko0"]
atlas = ExtResource("3_pupxb")
region = Rect2(0, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bw1j"]
atlas = ExtResource("3_pupxb")
region = Rect2(177, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvxl5"]
atlas = ExtResource("3_pupxb")
region = Rect2(354, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_imxj0"]
atlas = ExtResource("3_pupxb")
region = Rect2(531, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ihhu"]
atlas = ExtResource("3_pupxb")
region = Rect2(708, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_ik38y"]
atlas = ExtResource("3_pupxb")
region = Rect2(885, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_ap3qa"]
atlas = ExtResource("3_pupxb")
region = Rect2(1062, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8i45"]
atlas = ExtResource("3_pupxb")
region = Rect2(1239, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4681"]
atlas = ExtResource("3_pupxb")
region = Rect2(1416, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_vp80t"]
atlas = ExtResource("3_pupxb")
region = Rect2(1593, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtf00"]
atlas = ExtResource("3_pupxb")
region = Rect2(1770, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_ube1l"]
atlas = ExtResource("3_pupxb")
region = Rect2(1947, 0, 177, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_115ag"]
atlas = ExtResource("3_pupxb")
region = Rect2(2124, 0, 177, 127)

[sub_resource type="SpriteFrames" id="SpriteFrames_v0jfe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wirsj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rw1cp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqidy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3bgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3572")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkdpg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnfwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uepcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5vg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofnbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_recaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdelx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrp31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyoee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0725h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5k6e")
}],
"loop": true,
"name": &"idel",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwko0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bw1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvxl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imxj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ihhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ik38y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ap3qa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8i45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4681")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vp80t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtf00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ube1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_115ag")
}],
"loop": true,
"name": &"move",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_kxr87"]
atlas = ExtResource("1_s226o")
region = Rect2(0, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_2weae"]
atlas = ExtResource("1_s226o")
region = Rect2(343, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfmib"]
atlas = ExtResource("1_s226o")
region = Rect2(686, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_37ywv"]
atlas = ExtResource("1_s226o")
region = Rect2(1029, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ew25"]
atlas = ExtResource("1_s226o")
region = Rect2(1372, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvrfu"]
atlas = ExtResource("1_s226o")
region = Rect2(1715, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofr2x"]
atlas = ExtResource("1_s226o")
region = Rect2(2058, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcxdu"]
atlas = ExtResource("1_s226o")
region = Rect2(2401, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2125"]
atlas = ExtResource("1_s226o")
region = Rect2(2744, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2vhf"]
atlas = ExtResource("1_s226o")
region = Rect2(3087, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1p8u"]
atlas = ExtResource("1_s226o")
region = Rect2(3430, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j76j"]
atlas = ExtResource("1_s226o")
region = Rect2(3773, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ue8i"]
atlas = ExtResource("1_s226o")
region = Rect2(4116, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_bw5se"]
atlas = ExtResource("1_s226o")
region = Rect2(4459, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_oq25y"]
atlas = ExtResource("1_s226o")
region = Rect2(4802, 0, 343, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbojk"]
atlas = ExtResource("1_s226o")
region = Rect2(5145, 0, 343, 127)

[sub_resource type="SpriteFrames" id="SpriteFrames_3socb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxr87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2weae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfmib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37ywv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ew25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvrfu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofr2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcxdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2125")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2vhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1p8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j76j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ue8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bw5se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oq25y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbojk")
}],
"loop": true,
"name": &"attack",
"speed": 9.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_04p0b"]
size = Vector2(113, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3t60o"]
size = Vector2(49, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wn32k"]
size = Vector2(113, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gufbs"]
size = Vector2(113, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l52tu"]
size = Vector2(50, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iybss"]
size = Vector2(114, 51)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qffh1"]
size = Vector2(115, 13)

[node name="BossSlime" type="CharacterBody2D"]
script = ExtResource("1_5tkg7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -39)
sprite_frames = SubResource("SpriteFrames_v0jfe")
animation = &"idel"
autoplay = "idel"
frame_progress = 0.532298

[node name="AnimatedSpriteAtqueD2" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(68, -47)
sprite_frames = SubResource("SpriteFrames_3socb")
animation = &"attack"
frame_progress = 0.371341

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, -22)
shape = SubResource("RectangleShape2D_04p0b")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(15.5, -59)
shape = SubResource("RectangleShape2D_3t60o")
debug_color = Color(0.972136, 0.167705, 3.85046e-07, 0.42)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-2.5, -22)
shape = SubResource("RectangleShape2D_wn32k")
debug_color = Color(1, 0, 0, 0.341176)

[node name="hurtbox" type="Area2D" parent="."]
position = Vector2(1, -35)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(-3.5, 13)
shape = SubResource("RectangleShape2D_gufbs")
debug_color = Color(0.242678, 0.636368, 0, 0.42)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(15, -24.5)
shape = SubResource("RectangleShape2D_l52tu")
debug_color = Color(4.50023e-06, 0.647847, 0.199274, 0.42)

[node name="Derecha" type="RayCast2D" parent="."]
position = Vector2(59, -31)
rotation = -1.59092
target_position = Vector2(-0.321926, 15.9967)

[node name="Izquierda" type="RayCast2D" parent="."]
position = Vector2(-62, -33)
rotation = 1.56731
target_position = Vector2(-0.0663261, 18.9999)

[node name="hitbox2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox2"]
position = Vector2(-3, -23)
shape = SubResource("RectangleShape2D_iybss")
debug_color = Color(1, 0, 0, 0.419608)

[node name="coso" type="Timer" parent="."]

[node name="fondoVida" type="Sprite2D" parent="."]
position = Vector2(0, -90)
texture = ExtResource("5_rebo3")

[node name="Barravida" type="TextureProgressBar" parent="fondoVida"]
offset_left = -50.0
offset_top = -3.0
offset_right = 50.0
offset_bottom = 37.0
max_value = 500.0
texture_over = ExtResource("6_7k0ea")

[node name="Sprite2D" type="Sprite2D" parent="fondoVida"]
texture = ExtResource("7_iy1fy")

[node name="detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
position = Vector2(0.5, -20.5)
shape = SubResource("RectangleShape2D_qffh1")

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="coso" to="." method="_on_coso_timeout"]
[connection signal="area_entered" from="detection" to="." method="_on_detection_area_entered"]
